core: жизненный цикл аккаунта
